Add fast knn-preservation metric.

--- a/Metrics/template.ipynb
+++ b/Metrics/template.ipynb
@@ -52,7 +52,8 @@
     "import os\n",
     "os.chdir('..')\n",
     "\n",
-    "IMAGE_DATASETS = ['quickdraw', 'fashion']"
+    "IMAGE_DATASETS = ['quickdraw', 'fashion']\n",
+    "K_VALUES = [.05, .1, .15, .2] "
    ]
   },
   {
@@ -66,37 +67,26 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 600/600 [00:00<00:00, 1231.06it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(600, 88)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def get_md_dists(dataset_path):\n",
+    "def get_projection_as_array(dataset_path):\n",
     "    df = pd.read_csv(dataset_path, index_col=0)\n",
-    "    dists = []\n",
-    "    for poly in tqdm(df.values.reshape(len(df), -1, 2)):\n",
-    "        dists_i = []\n",
-    "        for i in range(len(poly)-1):\n",
-    "            dists_i.append(math.sqrt(np.sum(np.square(poly[i] - poly[i+1]))))\n",
-    "        dists.append(np.array(dists_i))\n",
-    "    return np.array(dists), df.index, len(poly)\n",
+    "    vs = df.values.reshape(len(df), -1, 2)\n",
+    "    return vs, list(df.index), vs.shape[1]\n",
     "\n",
-    "get_md_dists('./Output/quickdraw-pca_s4.csv')[0].shape"
+    "\n",
+    "def get_md_mov(dataset_path):\n",
+    "    vs, indexes, n_timesteps = get_projection_as_array(dataset_path)\n",
+    "    mov = []\n",
+    "    for poly in tqdm(vs):\n",
+    "        mov_i = []\n",
+    "        for i in range(len(poly)-1):\n",
+    "            mov_i.append(math.sqrt(np.sum(np.square(poly[i] - poly[i+1]))))\n",
+    "        mov.append(np.array(mov_i))\n",
+    "    return np.array(mov), indexes, n_timesteps\n",
+    "\n",
+    "\n",
+    "# get_md_mov('./Output/quickdraw-pca_s4.csv')"
    ]
   },
   {
@@ -132,8 +122,7 @@
     "        # Replicate last image\n",
     "        for t in range(max_t[img_id], n_revisions):\n",
     "            img_file = dataset_path + img_id + '-' + str(max_t[img_id]-1) + '.png'\n",
-    "            vs[t][i] = (cv2.imread(img_file, cv2.IMREAD_GRAYSCALE) / 255.).flatten()\n",
-    "    \n",
+    "            vs[t][i] = (cv2.imread(img_file, cv2.IMREAD_GRAYSCALE) / 255.).flatten()    \n",
     "    return vs, list(natsorted(max_t)), n_revisions\n",
     "\n",
     "\n",
@@ -147,23 +136,27 @@
     "    return np.array(vs), list(df_temp.index), n_timesteps\n",
     "\n",
     "\n",
-    "def get_nd_dists(dataset_id):\n",
-    "    dists = []\n",
+    "def dataset_as_array(dataset_path):\n",
+    "    if dataset_id in IMAGE_DATASETS:\n",
+    "         return image_dataset_to_array(dataset_path)\n",
+    "    else:\n",
+    "        return tabular_dataset_to_array(dataset_path)\n",
+    "\n",
+    "\n",
+    "def get_nd_mov(dataset_id):\n",
+    "    mov = []\n",
     "    dataset_path = './Datasets/' + dataset_id + '/'\n",
     "    # Get the nd data into arrays\n",
-    "    if dataset_id in IMAGE_DATASETS:\n",
-    "        vs, indexes, n_timesteps = image_dataset_to_array(dataset_path)\n",
-    "    else:\n",
-    "        vs, indexes, n_timesteps = tabular_dataset_to_array(dataset_path)\n",
+    "    vs, indexes, n_timesteps = dataset_as_array(dataset_path)\n",
     "    # Compute dists between 2 nd arrays\n",
     "    for t in tqdm(range(n_timesteps - 1)):\n",
     "        v_t = vs[t]\n",
     "        v_tp1 = vs[t+1]\n",
-    "        dists_t = []\n",
+    "        mov_t = []\n",
     "        for a, b in zip(v_t, v_tp1):\n",
-    "            dists_t.append(math.sqrt(np.sum(np.square(a - b))))\n",
-    "        dists.append(np.array(dists_t)) \n",
-    "    return np.array(dists).T, indexes, n_timesteps\n",
+    "            mov_t.append(math.sqrt(np.sum(np.square(a - b))))\n",
+    "        mov.append(np.array(mov_t)) \n",
+    "    return np.array(mov).T, indexes, n_timesteps\n",
     "\n",
     "# dists, indexes, n_timesteps = get_nd_dists('quickdraw')"
    ]
@@ -177,20 +170,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 63.15it/s]\n",
-      "100%|██████████| 2000/2000 [00:00<00:00, 10440.51it/s]\n",
-      "100%|██████████| 2000/2000 [00:00<00:00, 10012.41it/s]\n",
-      "100%|██████████| 2000/2000 [00:00<00:00, 10585.38it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 56.41it/s]\n",
+      "100%|██████████| 2000/2000 [00:00<00:00, 10942.37it/s]\n",
+      "100%|██████████| 2000/2000 [00:00<00:00, 10978.46it/s]\n",
+      "100%|██████████| 2000/2000 [00:00<00:00, 11573.89it/s]\n"
      ]
     }
    ],
    "source": [
     "# Compute distances\n",
-    "dists_nd, indexes, n_timesteps = get_nd_dists(dataset_id)\n",
-    "dists_md_dict = {}\n",
+    "mov_nd, indexes, n_timesteps = get_nd_mov(dataset_id)\n",
+    "mov_md_dict = {}\n",
     "for p in projection_paths:\n",
-    "    dists, _, _ = get_md_dists(p)\n",
-    "    dists_md_dict[p] = dists"
+    "    mov, _, _ = get_md_mov(p)\n",
+    "    mov_md_dict[p] = mov"
    ]
   },
   {
@@ -208,13 +201,13 @@
     }
    ],
    "source": [
-    "print(dists_nd.shape)\n",
-    "print(dists.shape)"
+    "print(mov_nd.shape)\n",
+    "print(mov.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -230,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -339,8 +332,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 80 ms, sys: 0 ns, total: 80 ms\n",
-      "Wall time: 81.8 ms\n"
+      "CPU times: user 92 ms, sys: 0 ns, total: 92 ms\n",
+      "Wall time: 88.7 ms\n"
      ]
     }
    ],
@@ -348,23 +341,23 @@
     "%%time\n",
     "\n",
     "# Flatten the data\n",
-    "dists_nd = dists_nd.flatten()\n",
+    "mov_nd = mov_nd.flatten()\n",
     "for p in projection_paths:\n",
-    "    dists_md = dists_md_dict[p].flatten()\n",
+    "    mov_md = mov_md_dict[p].flatten()\n",
     "\n",
     "    # Correlation and divergence metrics\n",
-    "    metric_results.loc[p]['stab_pearson']  = scipy.stats.pearsonr(dists_nd, dists_md)[0]\n",
-    "    metric_results.loc[p]['stab_spearman'] = scipy.stats.spearmanr(dists_nd, dists_md)[0]\n",
-    "    metric_results.loc[p]['stab_kendall']  = scipy.stats.kendalltau(dists_nd, dists_md)[0]\n",
-    "    metric_results.loc[p]['stab_kl']       = scipy.stats.entropy(dists_nd, dists_md)\n",
+    "    metric_results.loc[p]['stab_pearson']  = scipy.stats.pearsonr(mov_nd, mov_md)[0]\n",
+    "    metric_results.loc[p]['stab_spearman'] = scipy.stats.spearmanr(mov_nd, mov_md)[0]\n",
+    "    metric_results.loc[p]['stab_kendall']  = scipy.stats.kendalltau(mov_nd, mov_md)[0]\n",
+    "    metric_results.loc[p]['stab_kl']       = scipy.stats.entropy(mov_nd, mov_md)\n",
     "\n",
     "    # Stress metrics\n",
-    "    nd = dists_nd / max(dists_nd)\n",
-    "    md = dists_md / max(dists_md)\n",
+    "    nd = mov_nd / max(mov_nd)\n",
+    "    md = mov_md / max(mov_md)\n",
     "    metric_results.loc[p]['stab_stress_n'] = np.sum(np.square(nd - md)) / np.sum(np.square(nd))\n",
     "\n",
-    "    nd = (dists_nd - np.mean(dists_nd)) / np.std(dists_nd)\n",
-    "    md = (dists_md - np.mean(dists_md)) / np.std(dists_md)\n",
+    "    nd = (mov_nd - np.mean(mov_nd)) / np.std(mov_nd)\n",
+    "    md = (mov_md - np.mean(mov_md)) / np.std(mov_md)\n",
     "    metric_results.loc[p]['stab_stress_s'] = np.sum(np.square(nd - md)) / np.sum(np.square(nd))\n",
     "\n",
     "display(metric_results)"
@@ -379,32 +372,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "dataset_path = './Datasets/' + dataset_id + '/'\n",
+    "vs_n, indexes, n_revisions = dataset_as_array(dataset_path)\n",
+    "vs_m, _, _ = get_projection_as_array(projection_paths[1])\n",
+    "vs_m = np.transpose(vs_m, (1,0,2))\n",
+    "\n",
+    "# X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
+    "# nbrs = NearestNeighbors(n_neighbors=, algorithm='ball_tree').fit(X)\n",
+    "# _, indices = nbrs.kneighbors(X)\n",
+    "# indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 2000, 100)\n",
+      "(10, 2000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vs_n.shape)\n",
+    "print(vs_m.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:12<00:00,  1.26s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ngbr_preservation = np.zeros((n_timesteps, len(indexes), len(K_VALUES)))\n",
+    "for t in tqdm(range(n_timesteps)):\n",
+    "    # Generate list of nearest neighbors for each item in timestep t\n",
+    "    _, nbrs_nd = NearestNeighbors(n_neighbors=int(max(K_VALUES)*len(indexes)), metric='euclidean',\n",
+    "                                  algorithm='ball_tree').fit(vs_n[t]).kneighbors(vs_n[t])   \n",
+    "    _, nbrs_md = NearestNeighbors(n_neighbors=int(max(K_VALUES)*len(indexes)), metric='euclidean',\n",
+    "                                  algorithm='kd_tree').fit(vs_m[t]).kneighbors(vs_m[t])\n",
+    "    \n",
+    "    # Compute neighbor preservation for different values of k for each item \n",
+    "    for i in range(len(indexes)):\n",
+    "        for k_index, k_percentage in enumerate(K_VALUES):\n",
+    "            k = int(k_percentage * len(indexes))\n",
+    "            intersection = np.intersect1d(nbrs_nd[i, :k], nbrs_md[i, :k], assume_unique=True)\n",
+    "            ngbr_preservation[t][i][k_index] = len(intersection) / float(k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 1],\n",
-       "       [1, 0],\n",
-       "       [2, 1],\n",
-       "       [3, 4],\n",
-       "       [4, 3],\n",
-       "       [5, 4]])"
+       "(10, 2000, 4)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
-    "nbrs = NearestNeighbors(n_neighbors=2, algorithm='ball_tree').fit(X)\n",
-    "_, indices = nbrs.kneighbors(X)\n",
-    "indices"
+    "ngbr_preservation.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.4549365 , 0.88130275, 0.62597917, 0.52008937])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average values over TIME (axis 0)\n",
+    "ngbr_preservation = np.average(ngbr_preservation, axis=0)\n",
+    "# Then average values over all points (new axis 0)\n",
+    "ngbr_preservation = np.average(ngbr_preservation, axis=0)\n",
+    "# We get one value per k\n",
+    "ngbr_preservation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "215"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
