Metrics implemented, papermill works, csv generated.

--- a/Metrics/template.ipynb
+++ b/Metrics/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "parameters"
@@ -12,22 +12,15 @@
    "source": [
     "# This is the parameters cell\n",
     "# projection_paths = './Output/quickdraw-pca_s4.csv'\n",
-    "projection_paths = './Output/gaussians-pca_s4.csv ./Output/gaussians-AE_10f_2f_20ep.csv ./Output/gaussians-dtsne_70p_0-1l.csv'"
+    "# projection_paths = './Output/gaussians-pca_s4.csv ./Output/gaussians-AE_10f_2f_20ep.csv ./Output/gaussians-dtsne_70p_0-1l.csv'\n",
+    "projection_paths = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['./Output/gaussians-pca_s4.csv', './Output/gaussians-AE_10f_2f_20ep.csv', './Output/gaussians-dtsne_70p_0-1l.csv'] gaussians\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "projection_paths = projection_paths.split(' ')\n",
     "dataset_id = projection_paths[0].split('/')[-1].split('-')[0]\n",
@@ -36,21 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import scipy.stats\n",
     "import math\n",
     "import cv2\n",
     "import re\n",
     "import glob\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from natsort import natsorted\n",
-    "from tqdm import tqdm\n",
+    "from tqdm import tqdm_notebook\n",
     "import os\n",
-    "os.chdir('..')\n",
+    "# os.chdir('..')\n",
     "\n",
     "IMAGE_DATASETS = ['quickdraw', 'fashion']\n",
     "K_VALUES = [.05, .1, .15, .2] "
@@ -65,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +74,7 @@
     "def get_md_mov(dataset_path):\n",
     "    vs, indexes, n_timesteps = get_projection_as_array(dataset_path)\n",
     "    mov = []\n",
-    "    for poly in tqdm(vs):\n",
+    "    for poly in tqdm_notebook(vs):\n",
     "        mov_i = []\n",
     "        for i in range(len(poly)-1):\n",
     "            mov_i.append(math.sqrt(np.sum(np.square(poly[i] - poly[i+1]))))\n",
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +145,7 @@
     "    # Get the nd data into arrays\n",
     "    vs, indexes, n_timesteps = dataset_as_array(dataset_path)\n",
     "    # Compute dists between 2 nd arrays\n",
-    "    for t in tqdm(range(n_timesteps - 1)):\n",
+    "    for t in tqdm_notebook(range(n_timesteps - 1)):\n",
     "        v_t = vs[t]\n",
     "        v_tp1 = vs[t+1]\n",
     "        mov_t = []\n",
@@ -163,20 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 56.41it/s]\n",
-      "100%|██████████| 2000/2000 [00:00<00:00, 10942.37it/s]\n",
-      "100%|██████████| 2000/2000 [00:00<00:00, 10978.46it/s]\n",
-      "100%|██████████| 2000/2000 [00:00<00:00, 11573.89it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Compute distances\n",
     "mov_nd, indexes, n_timesteps = get_nd_mov(dataset_id)\n",
@@ -188,161 +173,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2000, 9)\n",
-      "(2000, 9)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mov_nd.shape)\n",
-    "print(mov.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "metric_ids = ['stab_pearson', 'stab_spearman', 'stab_kendall', 'stab_kl', 'stab_stress_n', 'stab_stress_s',\n",
-    "              'spat_knn_5', 'spat_knn_10', 'spat_knn_15', 'spat_knn_20']\n",
+    "              'spat_pearson', 'spat_spearman', 'spat_kendall', 'spat_kl', 'spat_stress_n', 'spat_stress_s',\n",
+    "              'spat_np_5', 'spat_np_10', 'spat_np_15', 'spat_np_20',\n",
+    "              'spat_nh_5', 'spat_nh_10', 'spat_nh_15', 'spat_nh_20']\n",
+    "\n",
     "metric_results = pd.DataFrame(np.zeros((len(projection_paths), len(metric_ids))),\n",
     "                              index=projection_paths, columns=metric_ids)\n",
-    "metric_results = metric_results.reindex(sorted(metric_results.columns), axis=1)\n",
+    "metric_results = metric_results.reindex(natsorted(metric_results.columns), axis=1)\n",
     "# metric_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>spat_knn_10</th>\n",
-       "      <th>spat_knn_15</th>\n",
-       "      <th>spat_knn_20</th>\n",
-       "      <th>spat_knn_5</th>\n",
-       "      <th>stab_kendall</th>\n",
-       "      <th>stab_kl</th>\n",
-       "      <th>stab_pearson</th>\n",
-       "      <th>stab_spearman</th>\n",
-       "      <th>stab_stress_n</th>\n",
-       "      <th>stab_stress_s</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>./Output/gaussians-pca_s4.csv</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.790809</td>\n",
-       "      <td>0.165721</td>\n",
-       "      <td>0.841275</td>\n",
-       "      <td>0.945271</td>\n",
-       "      <td>0.398367</td>\n",
-       "      <td>0.317449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>./Output/gaussians-AE_10f_2f_20ep.csv</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.716211</td>\n",
-       "      <td>0.347662</td>\n",
-       "      <td>0.724679</td>\n",
-       "      <td>0.898326</td>\n",
-       "      <td>0.631422</td>\n",
-       "      <td>0.550641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>./Output/gaussians-dtsne_70p_0-1l.csv</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.694352</td>\n",
-       "      <td>0.237730</td>\n",
-       "      <td>0.811766</td>\n",
-       "      <td>0.868227</td>\n",
-       "      <td>0.478215</td>\n",
-       "      <td>0.376469</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       spat_knn_10  spat_knn_15  spat_knn_20  \\\n",
-       "./Output/gaussians-pca_s4.csv                  0.0          0.0          0.0   \n",
-       "./Output/gaussians-AE_10f_2f_20ep.csv          0.0          0.0          0.0   \n",
-       "./Output/gaussians-dtsne_70p_0-1l.csv          0.0          0.0          0.0   \n",
-       "\n",
-       "                                       spat_knn_5  stab_kendall   stab_kl  \\\n",
-       "./Output/gaussians-pca_s4.csv                 0.0      0.790809  0.165721   \n",
-       "./Output/gaussians-AE_10f_2f_20ep.csv         0.0      0.716211  0.347662   \n",
-       "./Output/gaussians-dtsne_70p_0-1l.csv         0.0      0.694352  0.237730   \n",
-       "\n",
-       "                                       stab_pearson  stab_spearman  \\\n",
-       "./Output/gaussians-pca_s4.csv              0.841275       0.945271   \n",
-       "./Output/gaussians-AE_10f_2f_20ep.csv      0.724679       0.898326   \n",
-       "./Output/gaussians-dtsne_70p_0-1l.csv      0.811766       0.868227   \n",
-       "\n",
-       "                                       stab_stress_n  stab_stress_s  \n",
-       "./Output/gaussians-pca_s4.csv               0.398367       0.317449  \n",
-       "./Output/gaussians-AE_10f_2f_20ep.csv       0.631422       0.550641  \n",
-       "./Output/gaussians-dtsne_70p_0-1l.csv       0.478215       0.376469  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 92 ms, sys: 0 ns, total: 92 ms\n",
-      "Wall time: 88.7 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "\n",
     "# Flatten the data\n",
     "mov_nd = mov_nd.flatten()\n",
-    "for p in projection_paths:\n",
+    "for p in tqdm_notebook(projection_paths):\n",
     "    mov_md = mov_md_dict[p].flatten()\n",
     "\n",
     "    # Correlation and divergence metrics\n",
@@ -360,7 +216,25 @@
     "    md = (mov_md - np.mean(mov_md)) / np.std(mov_md)\n",
     "    metric_results.loc[p]['stab_stress_s'] = np.sum(np.square(nd - md)) / np.sum(np.square(nd))\n",
     "\n",
-    "display(metric_results)"
+    "# display(metric_results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig, axes = plt.subplots(figsize=(len(projection_paths)*4,4), ncols=len(projection_paths))\n",
+    "\n",
+    "# mov_nd = mov_nd.flatten()\n",
+    "# for i, p in enumerate(projection_paths):\n",
+    "#     mov_md = mov_md_dict[p].flatten()\n",
+    "#     axes[i].plot(mov_nd, mov_md, 'ko', alpha=.02)\n",
+    "#     axes[i].set_title(p.split('/')[-1][:-4])\n",
+    "#     if i == 0:\n",
+    "#         axes[i].set_xlabel('nD movement')\n",
+    "#         axes[i].set_ylabel('mD movement')    "
    ]
   },
   {
@@ -372,155 +246,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
+    "%%time\n",
     "\n",
     "dataset_path = './Datasets/' + dataset_id + '/'\n",
     "vs_n, indexes, n_revisions = dataset_as_array(dataset_path)\n",
-    "vs_m, _, _ = get_projection_as_array(projection_paths[1])\n",
-    "vs_m = np.transpose(vs_m, (1,0,2))\n",
     "\n",
-    "# X = np.array([[-1, -1], [-2, -1], [-3, -2], [1, 1], [2, 1], [3, 2]])\n",
-    "# nbrs = NearestNeighbors(n_neighbors=, algorithm='ball_tree').fit(X)\n",
-    "# _, indices = nbrs.kneighbors(X)\n",
-    "# indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 2000, 100)\n",
-      "(10, 2000, 2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(vs_n.shape)\n",
-    "print(vs_m.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:12<00:00,  1.26s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "ngbr_preservation = np.zeros((n_timesteps, len(indexes), len(K_VALUES)))\n",
-    "for t in tqdm(range(n_timesteps)):\n",
-    "    # Generate list of nearest neighbors for each item in timestep t\n",
-    "    _, nbrs_nd = NearestNeighbors(n_neighbors=int(max(K_VALUES)*len(indexes)), metric='euclidean',\n",
-    "                                  algorithm='ball_tree').fit(vs_n[t]).kneighbors(vs_n[t])   \n",
-    "    _, nbrs_md = NearestNeighbors(n_neighbors=int(max(K_VALUES)*len(indexes)), metric='euclidean',\n",
-    "                                  algorithm='kd_tree').fit(vs_m[t]).kneighbors(vs_m[t])\n",
+    "for p in projection_paths:\n",
+    "    # Change axis in projection\n",
+    "    vs_m, _, _ = get_projection_as_array(p)\n",
+    "    vs_m = np.transpose(vs_m, (1,0,2))\n",
     "    \n",
-    "    # Compute neighbor preservation for different values of k for each item \n",
-    "    for i in range(len(indexes)):\n",
-    "        for k_index, k_percentage in enumerate(K_VALUES):\n",
-    "            k = int(k_percentage * len(indexes))\n",
-    "            intersection = np.intersect1d(nbrs_nd[i, :k], nbrs_md[i, :k], assume_unique=True)\n",
-    "            ngbr_preservation[t][i][k_index] = len(intersection) / float(k)"
+    "    # Initialize structures\n",
+    "    index_to_class = np.array([item.split('-')[0] for item in np.array(indexes)])\n",
+    "    ngbr_preservation = np.zeros((n_timesteps, len(indexes), len(K_VALUES)))\n",
+    "    ngbr_hit = np.zeros((n_timesteps, len(indexes), len(K_VALUES)))\n",
+    "    dists_nd_all = []\n",
+    "    dists_md_all = [] \n",
+    "    \n",
+    "    for t in tqdm_notebook(range(n_timesteps)):\n",
+    "        # Generate list of nearest neighbors for each item in timestep t\n",
+    "        dists_nd, nbrs_nd = NearestNeighbors(n_neighbors=len(indexes), metric='euclidean',\n",
+    "                                      algorithm='ball_tree').fit(vs_n[t]).kneighbors(vs_n[t])   \n",
+    "        dists_md, nbrs_md = NearestNeighbors(n_neighbors=len(indexes), metric='euclidean',\n",
+    "                                      algorithm='kd_tree').fit(vs_m[t]).kneighbors(vs_m[t])\n",
+    "        \n",
+    "        # Save distances to compute correlation/stress metrics\n",
+    "        dists_nd = np.delete(dists_nd, 0)\n",
+    "        dists_nd_all.append(dists_nd)\n",
+    "        dists_md = np.delete(dists_md, 0)\n",
+    "        dists_md_all.append(dists_md)\n",
+    "        \n",
+    "        # Check classes of neighbors for neighbor hit metric\n",
+    "        for i in range(len(indexes)):\n",
+    "            for k_index, k_percentage in enumerate(K_VALUES):\n",
+    "                k = int(k_percentage * len(indexes))\n",
+    "                i_class = index_to_class[i]\n",
+    "                ngbr_classes = index_to_class[nbrs_nd[i, :k]]\n",
+    "                nh = len(list(filter(lambda x: x == i_class, ngbr_classes))) / float(k)\n",
+    "                ngbr_hit[t][i][k_index] = nh  \n",
+    "\n",
+    "        # Compute neighbor preservation for different values of k for each item \n",
+    "        for i in range(len(indexes)):\n",
+    "            for k_index, k_percentage in enumerate(K_VALUES):\n",
+    "                k = int(k_percentage * len(indexes))\n",
+    "                intersection = np.intersect1d(nbrs_nd[i, :k], nbrs_md[i, :k], assume_unique=True)\n",
+    "                ngbr_preservation[t][i][k_index] = len(intersection) / float(k)\n",
+    "        \n",
+    "    # Average values over TIME (axis 0)\n",
+    "    ngbr_preservation = np.average(ngbr_preservation, axis=0)\n",
+    "    ngbr_hit = np.average(ngbr_hit, axis=0)\n",
+    "\n",
+    "    # Then average values over all points (new axis 0)\n",
+    "    ngbr_preservation = np.average(ngbr_preservation, axis=0)\n",
+    "    ngbr_hit = np.average(ngbr_hit, axis=0)\n",
+    "\n",
+    "    # We get one value per k\n",
+    "    metric_results.loc[p]['spat_np_5']  = ngbr_preservation[0]\n",
+    "    metric_results.loc[p]['spat_np_10'] = ngbr_preservation[1]\n",
+    "    metric_results.loc[p]['spat_np_15'] = ngbr_preservation[2]\n",
+    "    metric_results.loc[p]['spat_np_20'] = ngbr_preservation[3]\n",
+    "    metric_results.loc[p]['spat_nh_5']  = ngbr_hit[0]\n",
+    "    metric_results.loc[p]['spat_nh_10'] = ngbr_hit[1]\n",
+    "    metric_results.loc[p]['spat_nh_15'] = ngbr_hit[2]\n",
+    "    metric_results.loc[p]['spat_nh_20'] = ngbr_hit[3]\n",
+    "    \n",
+    "    dists_nd_all = np.array(dists_nd_all)\n",
+    "    dists_md_all = np.array(dists_md_all)\n",
+    "    dists_nd_all = dists_nd_all.flatten()\n",
+    "    dists_md_all = dists_md_all.flatten()\n",
+    "\n",
+    "    # Stress metrics\n",
+    "    nd = dists_nd_all / max(dists_nd_all)\n",
+    "    md = dists_md_all / max(dists_md_all)\n",
+    "    metric_results.loc[p]['spat_stress_n'] = np.sum(np.square(nd - md)) / np.sum(np.square(nd))\n",
+    "\n",
+    "    nd = (dists_nd_all - np.mean(dists_nd_all)) / np.std(dists_nd_all)\n",
+    "    md = (dists_md_all - np.mean(dists_md_all)) / np.std(dists_md_all)\n",
+    "    metric_results.loc[p]['spat_stress_s'] = np.sum(np.square(nd - md)) / np.sum(np.square(nd))\n",
+    "    \n",
+    "    # Correlation and divergence metrics\n",
+    "    metric_results.loc[p]['spat_pearson']  = scipy.stats.pearsonr(dists_nd_all, dists_md_all)[0]\n",
+    "    metric_results.loc[p]['spat_spearman'] = scipy.stats.spearmanr(dists_nd_all, dists_md_all)[0]\n",
+    "    metric_results.loc[p]['spat_kendall']  = scipy.stats.kendalltau(dists_nd_all, dists_md_all)[0]\n",
+    "    metric_results.loc[p]['spat_kl']       = scipy.stats.entropy(dists_nd_all, dists_md_all)\n",
+    "\n",
+    "display(metric_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 2000, 4)"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ngbr_preservation.shape"
+    "metric_results.to_csv('./Metrics/Results/{}.csv'.format(dataset_id))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.4549365 , 0.88130275, 0.62597917, 0.52008937])"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Average values over TIME (axis 0)\n",
-    "ngbr_preservation = np.average(ngbr_preservation, axis=0)\n",
-    "# Then average values over all points (new axis 0)\n",
-    "ngbr_preservation = np.average(ngbr_preservation, axis=0)\n",
-    "# We get one value per k\n",
-    "ngbr_preservation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "215"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
