Improve metric computation.

--- a/Metrics/template.ipynb
+++ b/Metrics/template.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,17 @@
     "import cv2\n",
     "import re\n",
     "import glob\n",
+    "import sys\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "from natsort import natsorted\n",
-    "from tqdm import tqdm_notebook\n",
+    "from tqdm import tqdm\n",
     "import os\n",
     "# os.chdir('..')\n",
+    "sys.stderr = open('Metrics/log_' + dataset_id, 'w') # to check tqdm progress followed by watch -n 1 cat logfile\n",
     "\n",
     "IMAGE_DATASETS = ['quickdraw', 'fashion']\n",
-    "K_VALUES = [.05, .1, .15, .2] "
+    "# K_VALUES = [.05, .1, .15, .2] \n",
+    "K_VALUES = [i/10 for i in range(1,51)]"
    ]
   },
   {
@@ -74,7 +77,7 @@
     "def get_md_mov(dataset_path):\n",
     "    vs, indexes, n_timesteps = get_projection_as_array(dataset_path)\n",
     "    mov = []\n",
-    "    for poly in tqdm_notebook(vs):\n",
+    "    for poly in vs:\n",
     "        mov_i = []\n",
     "        for i in range(len(poly)-1):\n",
     "            mov_i.append(math.sqrt(np.sum(np.square(poly[i] - poly[i+1]))))\n",
@@ -145,7 +148,7 @@
     "    # Get the nd data into arrays\n",
     "    vs, indexes, n_timesteps = dataset_as_array(dataset_path)\n",
     "    # Compute dists between 2 nd arrays\n",
-    "    for t in tqdm_notebook(range(n_timesteps - 1)):\n",
+    "    for t in range(n_timesteps - 1):\n",
     "        v_t = vs[t]\n",
     "        v_tp1 = vs[t+1]\n",
     "        mov_t = []\n",
@@ -180,9 +183,11 @@
    "outputs": [],
    "source": [
     "metric_ids = ['stab_pearson', 'stab_spearman', 'stab_kendall', 'stab_kl', 'stab_stress_n', 'stab_stress_s',\n",
-    "              'spat_pearson', 'spat_spearman', 'spat_kendall', 'spat_kl', 'spat_stress_n', 'spat_stress_s',\n",
-    "              'spat_np_5', 'spat_np_10', 'spat_np_15', 'spat_np_20',\n",
-    "              'spat_nh_5', 'spat_nh_10', 'spat_nh_15', 'spat_nh_20']\n",
+    "              'spat_pearson', 'spat_spearman', 'spat_kendall', 'spat_kl', 'spat_stress_n', 'spat_stress_s']\n",
+    "\n",
+    "for k in K_VALUES:\n",
+    "    metric_ids.append('spat_np_' + str(int(k*10)))\n",
+    "    metric_ids.append('spat_nh_' + str(int(k*10)))\n",
     "\n",
     "metric_results = pd.DataFrame(np.zeros((len(projection_paths), len(metric_ids))),\n",
     "                              index=projection_paths, columns=metric_ids)\n",
@@ -198,7 +203,7 @@
    "source": [
     "# Flatten the data\n",
     "mov_nd = mov_nd.flatten()\n",
-    "for p in tqdm_notebook(projection_paths):\n",
+    "for p in projection_paths:\n",
     "    mov_md = mov_md_dict[p].flatten()\n",
     "\n",
     "    # Correlation and divergence metrics\n",
@@ -247,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -267,7 +274,7 @@
     "    dists_nd_all = []\n",
     "    dists_md_all = [] \n",
     "    \n",
-    "    for t in tqdm_notebook(range(n_timesteps)):\n",
+    "    for t in tqdm(range(n_timesteps)):\n",
     "        # Generate list of nearest neighbors for each item in timestep t\n",
     "        dists_nd, nbrs_nd = NearestNeighbors(n_neighbors=len(indexes), metric='euclidean',\n",
     "                                      algorithm='ball_tree').fit(vs_n[t]).kneighbors(vs_n[t])   \n",
@@ -282,11 +289,13 @@
     "        \n",
     "        # Check classes of neighbors for neighbor hit metric\n",
     "        for i in range(len(indexes)):\n",
+    "            i_class = index_to_class[i]\n",
+    "            k_max = int(max(K_VALUES) * len(indexes))\n",
+    "            ngbr_classes = index_to_class[nbrs_nd[i, :k_max]]\n",
     "            for k_index, k_percentage in enumerate(K_VALUES):\n",
     "                k = int(k_percentage * len(indexes))\n",
-    "                i_class = index_to_class[i]\n",
-    "                ngbr_classes = index_to_class[nbrs_nd[i, :k]]\n",
-    "                nh = len(list(filter(lambda x: x == i_class, ngbr_classes))) / float(k)\n",
+    "                ngbr_classes = ngbr_classes[:k]\n",
+    "                nh = sum(map(lambda x: x == i_class, ngbr_classes)) / float(k)\n",
     "                ngbr_hit[t][i][k_index] = nh  \n",
     "\n",
     "        # Compute neighbor preservation for different values of k for each item \n",
@@ -305,14 +314,9 @@
     "    ngbr_hit = np.average(ngbr_hit, axis=0)\n",
     "\n",
     "    # We get one value per k\n",
-    "    metric_results.loc[p]['spat_np_5']  = ngbr_preservation[0]\n",
-    "    metric_results.loc[p]['spat_np_10'] = ngbr_preservation[1]\n",
-    "    metric_results.loc[p]['spat_np_15'] = ngbr_preservation[2]\n",
-    "    metric_results.loc[p]['spat_np_20'] = ngbr_preservation[3]\n",
-    "    metric_results.loc[p]['spat_nh_5']  = ngbr_hit[0]\n",
-    "    metric_results.loc[p]['spat_nh_10'] = ngbr_hit[1]\n",
-    "    metric_results.loc[p]['spat_nh_15'] = ngbr_hit[2]\n",
-    "    metric_results.loc[p]['spat_nh_20'] = ngbr_hit[3]\n",
+    "    for i, k in enumerate(K_VALUES):\n",
+    "        metric_results.loc[p]['spat_np_' + str(int(k*10))] = ngbr_preservation[i]\n",
+    "        metric_results.loc[p]['spat_nh_' + str(int(k*10))] = ngbr_hit[i]\n",
     "    \n",
     "    dists_nd_all = np.array(dists_nd_all)\n",
     "    dists_md_all = np.array(dists_md_all)\n",
@@ -332,8 +336,15 @@
     "    metric_results.loc[p]['spat_pearson']  = scipy.stats.pearsonr(dists_nd_all, dists_md_all)[0]\n",
     "    metric_results.loc[p]['spat_spearman'] = scipy.stats.spearmanr(dists_nd_all, dists_md_all)[0]\n",
     "    metric_results.loc[p]['spat_kendall']  = scipy.stats.kendalltau(dists_nd_all, dists_md_all)[0]\n",
-    "    metric_results.loc[p]['spat_kl']       = scipy.stats.entropy(dists_nd_all, dists_md_all)\n",
-    "\n",
+    "    metric_results.loc[p]['spat_kl']       = scipy.stats.entropy(dists_nd_all, dists_md_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display(metric_results)"
    ]
   },
